--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,12 @@
-agm-map {
+.map {
   height: 100%;
 }
 
 .menu {
   position: absolute;
-  top: 10px;
+  top: 140px;
   right: 10px;
-  height: 580px;
+  height: 400px;
   width: 240px;
   border: 1px solid white; 
   background:rgba(0,0,0,0.5);
@@ -16,12 +16,15 @@ agm-map {
 .menu-bar {
   position: relative;
   top: 0;
-  height: 20px;
+  height: 30px;
+  border-bottom: 1px solid white; 
   background:rgba(255,255,255, 0.5);
 }
 
 .menu-bar-title {
-  padding: 4px;
+  position: relative;
+  top: 4px;
+  padding: 12px;
   color: white;
 }
 
