--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,21 +4,21 @@
 
 .menu {
   position: absolute;
-  top: 140px;
+  top: 40%;
   right: 10px;
-  height: 400px;
+  height: 300px;
   width: 240px;
-  border: 1px solid white; 
-  background:rgba(0,0,0,0.5);
-  z-index:1000;
+  border: 1px solid white;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
 }
 
 .menu-bar {
   position: relative;
   top: 0;
   height: 30px;
-  border-bottom: 1px solid white; 
-  background:rgba(255,255,255, 0.5);
+  border-bottom: 1px solid white;
+  background: rgba(255, 255, 255, 0.5);
 }
 
 .menu-bar-title {
